--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "react-snap"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
@@ -18,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
+    "react-snap": "^1.23.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
